--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                     <h2>Connect with Wizard's Computer Company</h2>
                     <p>Follow us on social media for the latest product arrivals, special offers, and limited stock alerts.</p>
                     <div class="community-buttons">
-                        <a href="#" class="social-btn">
+                        <a href="https://www.facebook.com/profile.php?id=100064481270844" class="social-btn">
                             <i class="fa-brands fa-facebook"></i>
                             <span>Facebook</span>
                         </a>
@@ -635,7 +635,7 @@
                         </div>
                         <p>Your trusted source for premium quality computers and accessories at affordable prices. Serving Sierra Leone since September 2017.</p>
                         <div class="footer-social">
-                            <a href="#" aria-label="Facebook">
+                            <a href="https://www.facebook.com/profile.php?id=100064481270844" aria-label="Facebook">
                                 <i class="fa-brands fa-facebook-f"></i>
                             </a>
                             <a href="https://wa.me/23288702625" aria-label="WhatsApp">
