--- a/services.html
+++ b/services.html
@@ -51,130 +51,199 @@
     <main class="main-content">
 
         <!-- Page Header -->
-        <section class="section section-alt" style="padding-top:60px;padding-bottom:60px;">
-            <div class="container">
-                <div class="section-header" style="margin-bottom:0;">
-                    <span class="section-badge fade-in">Our Services</span>
-                    <h2 class="section-title fade-in">Comprehensive Technology Solutions</h2>
-                    <p class="section-subtitle fade-in">From training and education to hardware sales and IT consulting, we provide end-to-end technology services for individuals and businesses in Freetown.</p>
-                </div>
-            </div>
-        </section>
+      <section class="section section-alt" style="padding-top:60px;padding-bottom:60px;">
+    <div class="container">
+        <div class="section-header" style="margin-bottom:0;">
+            <span class="section-badge fade-in">Our Services</span>
+            <h2 class="section-title fade-in">Complete Computer Sales & Support</h2>
+            <p class="section-subtitle fade-in">
+                Wizard’s Computer Company is Sierra Leone’s trusted destination for quality computers,
+                accessories, and reliable technical support. We help individuals, students, and businesses
+                find the right technology—tested, affordable, and ready to perform.
+            </p>
+        </div>
+    </div>
+</section>
 
         <!-- All Services -->
         <section class="section">
-            <div class="container">
-                <div class="section-header">
-                    <span class="section-badge fade-in">What We Offer</span>
-                    <h2 class="section-title fade-in">Our Full Service Range</h2>
-                </div>
-                <div class="features-grid fade-in">
-                    <div class="feature-card">
-                        <div class="feature-icon"><i class="fa-solid fa-chalkboard-user"></i></div>
-                        <h3>User Computer Training</h3>
-                        <p>Learn to use computers confidently with beginner-friendly courses covering Windows, file management, internet usage, email, and essential office applications. Perfect for first-time users and those looking to improve basic skills.</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon"><i class="fa-solid fa-code"></i></div>
-                        <h3>Programming Basics</h3>
-                        <p>Get started with coding through introductory programming courses. Learn the fundamentals of Python, HTML, CSS, and logical thinking for software development. Ideal for aspiring developers and tech enthusiasts.</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon"><i class="fa-solid fa-screwdriver-wrench"></i></div>
-                        <h3>Computer Setup &amp; Support</h3>
-                        <p>From initial setup to ongoing maintenance, we configure, repair, and optimize your computers, printers, and networking equipment for peak performance. We handle hardware and software issues alike.</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon"><i class="fa-solid fa-mug-hot"></i></div>
-                        <h3>Computer Cafe</h3>
-                        <p>Browse the internet, print documents, or complete assignments at our cafe with high-speed internet access and modern workstations. Available daily for walk-in customers, students, and professionals.</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon"><i class="fa-solid fa-headset"></i></div>
-                        <h3>IT Consulting</h3>
-                        <p>We advise businesses on the right technology solutions, from selecting hardware and software to setting up office networks and data backup systems. Tailored recommendations for your business needs.</p>
-                    </div>
-                    <div class="feature-card">
-                        <div class="feature-icon"><i class="fa-solid fa-print"></i></div>
-                        <h3>Printing &amp; Documentation</h3>
-                        <p>Professional printing, scanning, photocopying, and document formatting services available at our cafe for students, businesses, and individuals. Quality output at competitive rates.</p>
-                    </div>
-                </div>
+    <div class="container">
+        <div class="section-header">
+            <span class="section-badge fade-in">What We Offer</span>
+            <h2 class="section-title fade-in">Our Full Service Range</h2>
+        </div>
+        <div class="features-grid fade-in">
+            <div class="feature-card">
+                <div class="feature-icon"><i class="fa-solid fa-laptop"></i></div>
+                <h3>Laptops & Desktop Computers</h3>
+                <p>
+                    We sell a wide range of laptops and desktop computers for students, offices, businesses,
+                    and home use. All systems are carefully tested to ensure reliability, performance,
+                    and long-term value.
+                </p>
             </div>
-        </section>
+
+            <div class="feature-card">
+                <div class="feature-icon"><i class="fa-solid fa-gamepad"></i></div>
+                <h3>Gaming PCs & High-Performance Systems</h3>
+                <p>
+                    Power meets performance. Our gaming PCs and high-performance systems are built for speed,
+                    graphics, and multitasking—perfect for gamers, creators, and power users.
+                </p>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-icon"><i class="fa-solid fa-keyboard"></i></div>
+                <h3>Computer Accessories</h3>
+                <p>
+                    From keyboards, mouse, monitors, batteries, chargers, screens, and cables to essential
+                    peripherals, we stock everything needed to complete or upgrade your setup.
+                </p>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-icon"><i class="fa-solid fa-screwdriver-wrench"></i></div>
+                <h3>Computer Setup & Configuration</h3>
+                <p>
+                    We provide professional setup services including operating system installation,
+                    software configuration, driver updates, and performance optimization—ready to use
+                    from day one.
+                </p>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-icon"><i class="fa-solid fa-shield-halved"></i></div>
+                <h3>Maintenance & Basic Technical Support</h3>
+                <p>
+                    Keep your computer running smoothly with our maintenance and troubleshooting services.
+                    We handle common hardware and software issues to extend the life of your devices.
+                </p>
+            </div>
+
+            <div class="feature-card">
+                <div class="feature-icon"><i class="fa-solid fa-store"></i></div>
+                <h3>Walk-In Sales & Expert Advice</h3>
+                <p>
+                    Visit any of our locations for in-store purchases and expert guidance.
+                    Our team helps you choose the right computer or accessory based on your needs and budget.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
         <!-- Business Services -->
-        <section class="section section-alt">
-            <div class="container">
-                <div class="audience-section">
-                    <div class="audience-content fade-in">
-                        <span class="section-badge">For Businesses</span>
-                        <h2 class="section-title">Enterprise Technology Solutions</h2>
-                        <p>We provide comprehensive IT solutions for businesses of all sizes. From supplying computers and setting up office networks to training your staff and providing ongoing maintenance, WCC is your one-stop technology partner.</p>
-                        <ul class="audience-features">
-                            <li><i class="fa-solid fa-check"></i><span>Bulk computer and accessory procurement</span></li>
-                            <li><i class="fa-solid fa-check"></i><span>Office network setup and configuration</span></li>
-                            <li><i class="fa-solid fa-check"></i><span>Staff computer training programs</span></li>
-                            <li><i class="fa-solid fa-check"></i><span>Ongoing maintenance and IT support contracts</span></li>
-                            <li><i class="fa-solid fa-check"></i><span>Data backup and security consulting</span></li>
-                        </ul>
-                        <a href="contact.html" class="btn btn-primary">Request a Quote <i class="fa-solid fa-arrow-right"></i></a>
+       <section class="section section-alt">
+    <div class="container">
+        <div class="audience-section">
+            <div class="audience-content fade-in">
+                <span class="section-badge">For Businesses</span>
+                <h2 class="section-title">Business Computer & IT Solutions</h2>
+                <p>
+                    We support businesses across Sierra Leone with reliable computers, accessories,
+                    and professional IT services. From small offices to growing enterprises,
+                    Wizard’s Computer Company delivers tested equipment, smooth setup,
+                    and dependable ongoing support.
+                </p>
+                <ul class="audience-features">
+                    <li>
+                        <i class="fa-solid fa-check"></i>
+                        <span>Bulk supply of laptops, desktops, and accessories</span>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-check"></i>
+                        <span>Office computer setup and workstation configuration</span>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-check"></i>
+                        <span>Network and printer installation for offices</span>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-check"></i>
+                        <span>Ongoing maintenance and technical support</span>
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-check"></i>
+                        <span>Reliable after-sales support and upgrades</span>
+                    </li>
+                </ul>
+                <a href="contact.html" class="btn btn-primary">
+                    Request a Quote <i class="fa-solid fa-arrow-right"></i>
+                </a>
+            </div>
+
+            <div class="audience-visual fade-in">
+                <div class="visual-card">
+                    <div class="visual-header">
+                        <div class="visual-dots"><span></span><span></span><span></span></div>
                     </div>
-                    <div class="audience-visual fade-in">
-                        <div class="visual-card">
-                            <div class="visual-header">
-                                <div class="visual-dots"><span></span><span></span><span></span></div>
-                            </div>
-                            <div class="visual-content news-layout">
-                                <div class="news-headline"></div>
-                                <div class="news-grid">
-                                    <div class="news-image"></div>
-                                    <div class="news-text">
-                                        <div class="visual-line"></div>
-                                        <div class="visual-line"></div>
-                                        <div class="visual-line short"></div>
-                                    </div>
-                                </div>
+                    <div class="visual-content news-layout">
+                        <div class="news-headline"></div>
+                        <div class="news-grid">
+                            <div class="news-image"></div>
+                            <div class="news-text">
+                                <div class="visual-line"></div>
+                                <div class="visual-line"></div>
+                                <div class="visual-line short"></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </div>
+    </div>
+</section>
 
         <!-- How It Works -->
-        <section class="section">
-            <div class="container">
-                <div class="section-header">
-                    <span class="section-badge fade-in">How It Works</span>
-                    <h2 class="section-title fade-in">Getting Started Is Easy</h2>
-                    <p class="section-subtitle fade-in">Whether you need training, products, or IT support, getting started with WCC is straightforward.</p>
-                </div>
-                <div class="steps-grid fade-in">
-                    <div class="step-card">
-                        <div class="step-number">1</div>
-                        <div class="step-content">
-                            <h3>Tell Us What You Need</h3>
-                            <p>Visit us at our Portee location, call us, or send an email describing your technology needs. We listen carefully to understand exactly what you require.</p>
-                        </div>
-                    </div>
-                    <div class="step-card">
-                        <div class="step-number">2</div>
-                        <div class="step-content">
-                            <h3>We Recommend Solutions</h3>
-                            <p>Based on your needs and budget, we provide tailored recommendations for products, training, or IT services that best fit your situation.</p>
-                        </div>
-                    </div>
-                    <div class="step-card">
-                        <div class="step-number">3</div>
-                        <div class="step-content">
-                            <h3>We Deliver &amp; Support</h3>
-                            <p>We deliver your products, enroll you in training, or begin IT support. Our relationship continues with after-sales support and ongoing assistance.</p>
-                        </div>
-                    </div>
+      <section class="section">
+    <div class="container">
+        <div class="section-header">
+            <span class="section-badge fade-in">How It Works</span>
+            <h2 class="section-title fade-in">Getting Started Is Easy</h2>
+            <p class="section-subtitle fade-in">
+                Buying computers or accessories from Wizard’s Computer Company is simple,
+                fast, and hassle-free.
+            </p>
+        </div>
+        <div class="steps-grid fade-in">
+            <div class="step-card">
+                <div class="step-number">1</div>
+                <div class="step-content">
+                    <h3>Tell Us What You Need</h3>
+                    <p>
+                        Visit any of our locations, call us, or send a message describing the type
+                        of computer or accessories you’re looking for. We help you identify
+                        the best option for your needs and budget.
+                    </p>
                 </div>
             </div>
-        </section>
+
+            <div class="step-card">
+                <div class="step-number">2</div>
+                <div class="step-content">
+                    <h3>We Recommend the Right Products</h3>
+                    <p>
+                        Our experts recommend reliable laptops, desktops, gaming PCs,
+                        and accessories that match your requirements—no guesswork,
+                        just trusted advice.
+                    </p>
+                </div>
+            </div>
+
+            <div class="step-card">
+                <div class="step-number">3</div>
+                <div class="step-content">
+                    <h3>Purchase, Setup & Support</h3>
+                    <p>
+                        Once you purchase, we handle setup, configuration, and provide
+                        after-sales support to ensure your system performs perfectly
+                        from day one.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
         <!-- CTA -->
         <section class="section section-cta">
