--- a/about.html
+++ b/about.html
@@ -87,85 +87,102 @@
 
         <!-- Our Story -->
         <section class="section">
-            <div class="container">
-                <div class="mission-grid">
-                    <div class="mission-content fade-in">
-                        <span class="section-badge">Our Story</span>
-                        <h2 class="section-title">From Vision to Reality</h2>
-                        <p class="mission-text">
-                            Wizard's Computer Company SL Ltd was founded with a simple but powerful idea: that everyone in Sierra Leone deserves access to quality technology, training, and support. What started as a small computer cafe has grown into a comprehensive technology hub serving hundreds of individuals and businesses across Freetown.
-                        </p>
-                        <p class="mission-text">
-                            Today, we operate a full-service computer cafe, a hands-on learning center offering structured training programs, and a retail outlet stocked with quality computers and accessories. Our team of experienced IT professionals is committed to empowering our community with the digital skills and tools they need to succeed.
-                        </p>
+    <div class="container">
+        <div class="mission-grid">
+            <div class="mission-content fade-in">
+                <span class="section-badge">Our Story</span>
+                <h2 class="section-title">Sierra Leone's #1 Computer Shop</h2>
+                <p class="mission-text">
+                    Wizard's Computer Company SL Ltd is proud to be recognized as the <strong>#1 computer shop in Sierra Leone</strong>, offering top-quality computers, laptops, gaming PCs, office systems, and accessories. Since our founding, we’ve been committed to bringing the best technology solutions to individuals, students, and businesses across Freetown and beyond.
+                </p>
+                <p class="mission-text">
+                    From fully equipped retail outlets to hands-on learning programs, we combine expert advice, unbeatable products, and reliable support. Our dedicated team ensures that every customer finds efficient, budget-friendly technology tailored to their needs, making us the leading destination for computers and accessories in Sierra Leone.
+                </p>
+            </div>
+            <div class="mission-visual fade-in">
+                <div class="vision-card">
+                    <div class="vision-icon">
+                        <i class="fa-solid fa-building"></i>
                     </div>
-                    <div class="mission-visual fade-in">
-                        <div class="vision-card">
-                            <div class="vision-icon">
-                                <i class="fa-solid fa-building"></i>
-                            </div>
-                            <h3>Our Location</h3>
-                            <p>174 Bai Bureh Rd, Portee, Wellington Freetown, Sierra Leone. Open Monday to Saturday, 8:00 AM to 6:00 PM. Walk-ins welcome for cafe services, product purchases, and training enrollment.</p>
-                        </div>
-                    </div>
+                    <h3>Our Locations</h3>
+                    <p>
+                        174 Bai Bureh Rd, Portee, Wellington Freetown<br>
+                        134 Bai Bureh Rd, Portee, Wellington Freetown<br>
+                        23a Cambul Street, Makeni<br>
+                        Open Monday to Saturday, 8:00 AM to 6:00 PM. Walk-ins welcome for product purchases and training enrollment.
+                    </p>
                 </div>
             </div>
-        </section>
+        </div>
+    </div>
+</section>
 
         <!-- Mission & Vision -->
-        <section class="section section-alt">
-            <div class="container">
-                <div class="section-header">
-                    <span class="section-badge fade-in">Our Purpose</span>
-                    <h2 class="section-title fade-in">Mission &amp; Vision</h2>
-                </div>
-                <div class="why-grid fade-in">
-                    <div class="why-card">
-                        <div class="why-number"><i class="fa-solid fa-bullseye" style="font-size:36px;"></i></div>
-                        <h3>Our Mission</h3>
-                        <p>To empower individuals and businesses in Sierra Leone with the digital skills, tools, and support they need to thrive in the modern economy. We bridge the digital skills gap by providing accessible and practical technology solutions.</p>
-                    </div>
-                    <div class="why-card">
-                        <div class="why-number"><i class="fa-solid fa-eye" style="font-size:36px;"></i></div>
-                        <h3>Our Vision</h3>
-                        <p>To become Sierra Leone's most trusted technology partner, where every individual and business has access to quality computer training, reliable equipment, and expert IT support to compete in the digital economy.</p>
-                    </div>
-                </div>
+       <section class="section section-alt">
+    <div class="container">
+        <div class="section-header">
+            <span class="section-badge fade-in">Our Purpose</span>
+            <h2 class="section-title fade-in">Mission &amp; Vision</h2>
+        </div>
+        <div class="why-grid fade-in">
+            <div class="why-card">
+                <div class="why-number"><i class="fa-solid fa-bullseye" style="font-size:36px;"></i></div>
+                <h3>Our Mission</h3>
+                <p>
+                    To be Sierra Leone's <strong>#1 computer shop</strong> by providing high-quality computers, laptops, gaming PCs, office systems, and accessories. We aim to empower individuals, students, and businesses with reliable technology solutions and expert guidance for success in the digital world.
+                </p>
             </div>
-        </section>
+            <div class="why-card">
+                <div class="why-number"><i class="fa-solid fa-eye" style="font-size:36px;"></i></div>
+                <h3>Our Vision</h3>
+                <p>
+                    To be the most trusted technology partner in Sierra Leone, where everyone can access premium computers, accessories, and professional IT support. We strive to lead the market in quality, service, and innovation, setting the standard for computer shops nationwide.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
         <!-- What We Do -->
-        <section class="section">
-            <div class="container">
-                <div class="section-header">
-                    <span class="section-badge fade-in">What We Do</span>
-                    <h2 class="section-title fade-in">Three Pillars of Service</h2>
+      <section class="section">
+    <div class="container">
+        <div class="section-header">
+            <span class="section-badge fade-in">What We Do</span>
+            <h2 class="section-title fade-in">Three Pillars of Service</h2>
+        </div>
+        <div class="content-grid fade-in">
+            <div class="content-card">
+                <div class="card-icon">
+                    <i class="fa-solid fa-computer"></i>
                 </div>
-                <div class="content-grid fade-in">
-                    <div class="content-card">
-                        <div class="card-icon">
-                            <i class="fa-solid fa-mug-hot"></i>
-                        </div>
-                        <h3>Computer Cafe</h3>
-                        <p>Access high-speed internet, print documents, and use modern workstations in a comfortable, professional environment. Open daily for walk-in customers, students, and professionals who need reliable computing access.</p>
-                    </div>
-                    <div class="content-card">
-                        <div class="card-icon">
-                            <i class="fa-solid fa-chalkboard-user"></i>
-                        </div>
-                        <h3>Learning Center</h3>
-                        <p>Join structured training programs in computer basics, Microsoft Office, programming fundamentals, and more. Our courses are designed for beginners and working professionals who want to build practical digital skills.</p>
-                    </div>
-                    <div class="content-card">
-                        <div class="card-icon">
-                            <i class="fa-solid fa-microchip"></i>
-                        </div>
-                        <h3>Device Retail &amp; Support</h3>
-                        <p>From laptops and desktops to monitors and accessories, we sell, set up, and support a wide range of computer equipment for personal and business use. Every product is quality-tested and backed by our warranty.</p>
-                    </div>
-                </div>
+                <h3>Computer Sales</h3>
+                <p>
+                    We are proudly recognized as the <strong>#1 computer shop in Sierra Leone</strong>, offering high-quality laptops, desktops, gaming PCs, and office & student computers. All systems are tested, reliable, and priced to fit every budget.
+                </p>
             </div>
-        </section>
+
+            <div class="content-card">
+                <div class="card-icon">
+                    <i class="fa-solid fa-keyboard"></i>
+                </div>
+                <h3>Accessories & Peripherals</h3>
+                <p>
+                    From keyboards, mouse, monitors, batteries, chargers, and screens to essential computer accessories, we stock everything you need to complete or upgrade your setup—all under one trusted roof.
+                </p>
+            </div>
+
+            <div class="content-card">
+                <div class="card-icon">
+                    <i class="fa-solid fa-screwdriver-wrench"></i>
+                </div>
+                <h3>Setup & Technical Support</h3>
+                <p>
+                    We don’t just sell—we help you get started. Our experts provide computer setup, software installation, upgrades, and basic technical support to ensure every customer leaves fully satisfied.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
 
         <!-- Core Values -->
         <section class="section section-alt">
@@ -274,7 +291,7 @@
                         </div>
                         <p>Your trusted partner for computer training, sales, and IT support in Freetown, Sierra Leone.</p>
                         <div class="footer-social">
-                            <a href="#" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100064481270844" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
                             <a href="#" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
                             <a href="#" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
                             <a href="mailto:wccsltd@gmail.com" aria-label="Email"><i class="fa-solid fa-envelope"></i></a>
